k8s/namespaces/netbox/netbox/traefik-netbox.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: traefik-netbox
  namespace: netbox
  annotations:
    ingress.kubernetes.io/whitelist-x-forwarded-for: "true"
    traefik.ingress.kubernetes.io/router.entrypoints: web
    traefik.ingress.kubernetes.io/router.middlewares: netbox-redirect@kubernetescrd
    traefik.ingress.kubernetes.io/affinity: "true"
    traefik.ingress.kubernetes.io/whitelist-source-range: 81.134.202.29/32, 51.145.6.230/32,
      213.121.161.124/32, 20.50.108.242/32, 20.50.109.148/32, 51.11.124.205/32, 51.11.124.216/32


spec:
  rules:
    - host: netbox.sandbox.platform.hmcts.net
      http:
        paths:
          - backend:
              service:
                name: netbox
                port:
                  number: 80
            path: /
            pathType: ImplementationSpecific
status:
  loadBalancer: {}
---
# Redirect to https
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: redirect
  namespace: netbox

spec:
  redirectScheme:
    scheme: https
    permanent: true
